[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pantheon-streamlit-javascript"
version = "1.42.0"
description = "component to run javascript code in streamlit application"
readme = "README.md"
requires-python = ">=3.9, !=3.9.7"
license = { text = "MIT License" }
authors = [
  { name = "Alexander Balasch & Strings" }
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
dependencies = [
  "streamlit >= 1.42.0",
]

[project.urls]
Homepage = "https://github.com/ckosmic/streamlit-javascript"

[tool.hatch.build]
include = [
  "pantheon_streamlit_javascript/**",
  "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["pantheon_streamlit_javascript"]
include = [
  "pantheon_streamlit_javascript/frontend/build/**",
  "pantheon_streamlit_javascript/frontend/package.json",
  "pantheon_streamlit_javascript/__init__.py",
  "README.md",
]
exclude = [
  "pantheon_streamlit_javascript/frontend/node_modules/**",
  "pantheon_streamlit_javascript/frontend/src/**",
  "pantheon_streamlit_javascript/frontend/public/**",
  "pantheon_streamlit_javascript/frontend/.prettierrc",
  "pantheon_streamlit_javascript/frontend/tsconfig.json"
]

[tool.hatch.build.targets.wheel.force-include]
"pantheon_streamlit_javascript/frontend/build" = "pantheon_streamlit_javascript/frontend/build"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"


